# oci-arabic-rag-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: metrics.py  run_benchmark.py
benchmarks/data/: eval_set.json  legal_corpus.json  legal_eval_set.json  sample_corpus.json
benchmarks/results/: BENCHMARK.md  results.json
examples/: compliance_qa.py  interactive.py  interactive_oci.py
src/arabicrag/: __init__.py  chunking.py  embeddings.py  normalization.py  prompts.py  retrieval.py
tests/: test_normalization.py
